Fixed text wrap Added background image

--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,11 @@ body {
   line-height: 27px;
 
   /* Visual */
-  background-image: url(../img/leafbg.jpg);
-  background-repeat: repeat;
+  background-image: url(../img/pngbarn.png);
+  background-repeat: no-repeat;
+  background-size: 40%;
+  background-position: 100px 50px 0 0;
+  background-color: #ccc;
   
 
 }
